cpp/test/Slice/errorDetection/LocalMistmatch.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

interface Intf1;
local interface Intf1;
local interface Intf1 { };

interface Intf2 { };
local interface Intf2;

local interface Intf3;
interface Intf3;
interface Intf3 { };

local interface Intf4 { };
interface Intf4;

interface Class1;
local interface Class1;
local interface Class1 { };

interface Class2 { };
local interface Class2;

local interface Class3;
interface Class3;
interface Class3 { };

local interface Class4 { };
interface Class4;
